--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@reach/router": "^1.3.4",
+    "@types/reach__router": "^1.3.8"
   }
 }
