--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "@reach/router": "^1.3.4",
-    "@types/reach__router": "^1.3.8"
+    "@types/reach__router": "^1.3.8",
+    "@types/react-select": "^4.0.16",
+    "react-select": "^4.3.1"
   }
 }
