--- a/package.json
+++ b/package.json
@@ -1,52 +1,103 @@
 {
-  "name": "address-book",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.15",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/sass": "^1.16.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
-    "sass": "^1.35.1",
-    "typescript": "^4.3.4",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@reach/router": "^1.3.4",
-    "@types/reach__router": "^1.3.8",
-    "@types/react-select": "^4.0.16",
-    "react-select": "^4.3.1"
-  }
+	"name": "address-book",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"@types/jest": "^26.0.23",
+		"@types/node": "^12.20.15",
+		"@types/react": "^17.0.11",
+		"@types/react-dom": "^17.0.8",
+		"@types/sass": "^1.16.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-icons": "^4.2.0",
+		"react-scripts": "4.0.3",
+		"sass": "^1.35.1",
+		"typescript": "^4.3.4",
+		"web-vitals": "^1.1.2"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"test:coverage": "react-scripts test --env=jsdom --coverage --runInBand --watchAll=false",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@reach/router": "^1.3.4",
+		"@types/enzyme": "^3.10.8",
+		"@types/enzyme-adapter-react-16": "^1.0.6",
+		"@types/reach__router": "^1.3.8",
+		"@types/react-select": "^4.0.16",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.6",
+		"enzyme-to-json": "^3.6.2",
+		"jest-fetch-mock": "^3.0.3",
+		"react-select": "^4.3.1",
+		"ts-jest": "^27.0.3"
+	},
+	"jest": {
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx,ts,tsx}",
+			"!src/**/*.d.ts",
+			"!src/index.tsx",
+			"!src/serviceWorker.ts",
+			"!src/reportWebVitals.ts"
+		],
+		"coveragePathIgnorePatterns": [
+			"./src/*/*.types.{ts,tsx}",
+			"./src/index.tsx",
+			"./src/serviceWorker.ts"
+		],
+		"coverageReporters": [
+			"json",
+			"lcov",
+			"text-summary",
+			"clover"
+		],
+		"coverageThreshold": {
+			"global": {
+				"statements": 95,
+				"branches": 95,
+				"lines": 95,
+				"functions": 95
+			}
+		},
+		"snapshotSerializers": [
+			"enzyme-to-json/serializer"
+		],
+		"transform": {
+			"^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/ts-jest"
+		},
+		"transformIgnorePatterns": [
+			"[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+			"^.+\\.module\\.(css|sass|scss)$"
+		],
+		"moduleNameMapper": {
+			"^react-native$": "react-native-web",
+			"^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
+			"src/(.*)$": "<rootDir>/src/$1"
+		}
+	}
 }
