--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
 		"@testing-library/user-event": "^12.8.3",
 		"@types/jest": "^26.0.23",
 		"@types/node": "^12.20.15",
-		"@types/react": "^17.0.11",
-		"@types/react-dom": "^17.0.8",
+		"@types/react": "~16.12.0",
+		"@types/react-dom": "~16.12.0",
 		"@types/sass": "^1.16.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "~16.12.0",
+		"react-dom": "~16.12.0",
 		"react-icons": "^4.2.0",
 		"react-scripts": "4.0.3",
 		"sass": "^1.35.1",
